--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,3 +8,12 @@
     padding-top: 66px;
     margin: 0;
 }
+@media screen and (max-width: 900px) {
+    .footer {
+        font-size: 14px;
+        line-height: 17px;
+        padding-top: 48px;
+        padding-left: 19px;
+        padding-right: 19px;
+    }
+}
