--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,15 @@
 .page {
+    margin: 0;
     background: #000000;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
+    padding-top: 45px;
+    padding-bottom: 60px;
+}
+@media screen and (max-width: 900px){
+    .page {
+        padding-top: 28px;
+        padding-bottom: 36px;
+    }
 }
