--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,3 +1,9 @@
 .profile__edit-button {
-    align-self: center;
+    margin-top: 15px;
+}
+@media screen and (max-width: 550px){
+    .profile__edit-button {
+        margin-top: 0;
+        align-self: center;
+    }
 }
