--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
     width: 282px;
-    height: 361px;
     background: #FFFFFF;
     border-radius: 10px;
     position: relative;
+    padding-bottom: 31px;
 }
