--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,13 +4,24 @@
     font-style: normal;
     font-size: 14px;
     line-height: 17px;
+
+    max-width: 358px;
     width: 100%;
-    max-height: 27px;
+    min-height: 27px;
     margin: 0 0 30px 0;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.popup__input:focus {
+    border-bottom: 2px solid rgba(0, 0, 0, 0.8);
+}
+@media screen and (max-width: 550px){
+    .popup__input {
+        max-width: 238px;
+    }
 }
