--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
