--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,4 @@
-.avatar {
+.profile__avatar {
     display: grid;
     grid-template-columns: repeat(2, minmax(min-content, max-content));
     column-gap: 30px;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .avatar {
+    .profile__avatar {
         row-gap: 26px;
         justify-items: center;
         grid-template-columns: minmax(min-content, max-content);
@@ -16,8 +16,7 @@
 }
 
 @media screen and (max-width: 500px) {
-    .avatar {
-        row-gap: 26px;
+    .profile__avatar {
         grid-template-columns: 282px;
     }
 }
