--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,10 +7,16 @@
     line-height: 22px;
     color: #FFFFFF;
     margin: 0;
+
+    max-width: 336px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 500px) {
     .profile__subtitle {
+        max-width: 282px;
         font-size: 14px;
         line-height: 17px;
     }
