--- a/blocks/button/__add/button__add.css
+++ b/blocks/button/__add/button__add.css
@@ -1,22 +1,22 @@
-.button_type_add {
+.button__add {
     align-self: center;
     width: 150px;
     height: 50px;
-    background: transparent url("../../../images/add-button/add-button__icon.svg") no-repeat center;
+    background: transparent url("../../../images/button/__add/add-button-icon.svg") no-repeat center;
     border: 2px solid #FFFFFF;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 2px;
 }
 
 @media screen and (min-width: 501px) {
-    .button_type_add:hover {
+    .button__add:hover {
         opacity: 0.6;
         transition: opacity 0.2s linear;
     }
 }
 
 @media screen and (max-width: 500px) {
-    .button_type_add {
+    .button__add {
         justify-self: center;
         width: 282px;
     }
