--- a/blocks/button/__close/button__close.css
+++ b/blocks/button/__close/button__close.css
@@ -1,4 +1,4 @@
-.button_type_close {
+.button__close {
     position: absolute;
     right: -40px;
     top: -40px;
@@ -10,19 +10,19 @@
     margin: 0;
     width: 32px;
     height: 32px;
-    background-image: url("../../../images/close-icon/close-icon.svg");
+    background-image: url("../../../images/button/__close/close-icon.svg");
     background-size: cover;
 }
 
 @media screen and (min-width: 400px) {
-    .button_type_close:hover {
+    .button__close:hover {
         opacity: 0.6;
         transition: opacity 0.2s linear;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .button_type_close {
+    .button__close {
         right: 0;
         top: -36px;
         width: 20px;
