--- a/blocks/button/__save/button__save.css
+++ b/blocks/button/__save/button__save.css
@@ -1,4 +1,4 @@
-.button_type_save {
+.button__save {
     margin-top: 18px;
     width: 358px;
     min-height: 50px;
@@ -19,14 +19,14 @@
 }
 
 @media screen and (min-width: 551px) {
-    .button_type_save:hover {
+    .button__save:hover {
         opacity: 80%;
         transition: opacity 0.2s linear;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .button_type_save {
+    .button__save {
         margin-top: 15px;
         font-size: 14px;
         line-height: 17px;
