--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,6 @@
 .popup {
-    display: none;
+    display: flex;
+    visibility: hidden;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
@@ -8,4 +9,6 @@
     height: 100%;
     top: 0;
     left: 0;
+    opacity: 0;
+    transition: opacity 0.5s, visibility 0.5s linear;
 }
