--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,12 +1,12 @@
 .popup__input {
-    padding: 0 0 10px 0;
+    padding: 0 0 5px 0;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-size: 14px;
     line-height: 17px;
     width: 100%;
     min-height: 27px;
-    margin: 0 0 30px 0;
+    margin: 0;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
