--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -26,17 +26,20 @@
 @import url("../blocks/page/page.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__image/profile__image.css");
+@import url("../blocks/profile/__image-overlay/profile__image-overlay.css");
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__title/profile__title.css");
 @import url("../blocks/profile/__subtitle/profile__subtitle.css");
 @import url("../blocks/places/places.css");
 @import url("../blocks/place/place.css");
+@import url("../blocks/place/__like-count/place__like-count.css");
 @import url("../blocks/place/__title-like/place__title-like.css");
 @import url("../blocks/place/__image/place__image.css");
 @import url("../blocks/place/__image-link/place__image-link.css");
 @import url("../blocks/place/__title/place__title.css");
 @import url("../blocks/button/__like/button__like.css");
+@import url("../blocks/button/_visible/button_visible_hidden.css");
 @import url("../blocks/button/__like/_active/button__like_active.css");
 @import url("../blocks/button/__remove/button__remove.css");
 @import url("../blocks/footer/footer.css");
